Agrego párrafo descriptivo a inicio.html

--- a/inicio.html
+++ b/inicio.html
@@ -15,6 +15,11 @@
                 Hola! Soy Edu, estudiante de iFP en Madrid, vivo en Getafe y disfruto programando.
                 Me gusta la musica y el deporte.
             </p>
+
+            <p>
+                Este portafolio muestra mis trabajos y proyectos recientes
+            </p>
+
     </div>
 
     <div>
